force-app/main/default/objects/Incident_Note__c/Incident_Note__c.object-meta.xml
<CustomObject>
    <label>Incident Note</label>
    <nameField>
        <displayFormat>Note-{0}</displayFormat>
        <label>Incident Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>