force-app/main/default/objects/Incident_Note__c/fields/Incident_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Incident_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident Tracker</label>
    <referenceTo>Incident_Tracker__c</referenceTo>
    <relationshipLabel>Incident Notes</relationshipLabel>
    <relationshipName>Incident_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>